<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/sizeXX_small"
        android:background="@drawable/bg_item_favorite_coin"
        android:paddingHorizontal="@dimen/sizeXXX_small"
        android:paddingVertical="@dimen/sizeX_small">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvPairName"
            style="@style/studioSansPurpleBlack20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="1"
            android:maxLines="1"
            android:text="@string/coin_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvLast"
            style="@style/studioSansPurpleBlack20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="1"
            android:maxLines="1"
            android:paddingVertical="@dimen/sizeXX_small"
            android:text="@string/last"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPairName" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDailyPercent"
            style="@style/studioSansRed15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="1"
            android:maxLines="1"
            android:text="@string/daily_percent_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLast" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>