<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swPairList"
            android:layout_width="@dimen/size_0dp"
            android:layout_height="@dimen/size_0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvFavorites"
                        style="@style/studioSansPurpleBlack25"
                        android:layout_width="@dimen/size_0dp"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/sizeX_medium"
                        android:text="@string/favorites"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvFavoritePairs"
                        android:layout_width="@dimen/size_0dp"
                        android:layout_height="wrap_content"
                        android:clipToPadding="false"
                        android:orientation="horizontal"
                        android:paddingStart="@dimen/sizeX_medium"
                        android:paddingEnd="@dimen/size_0dp"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvFavorites"
                        tools:itemCount="5" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvPairs"
                        style="@style/studioSansPurpleBlack25"
                        android:layout_width="@dimen/size_0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/sizeXXXX_small"
                        android:padding="@dimen/sizeX_medium"
                        android:text="@string/coins"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/rvFavoritePairs" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvPairs"
                        android:layout_width="@dimen/size_0dp"
                        android:layout_height="wrap_content"
                        android:nestedScrollingEnabled="false"
                        android:orientation="vertical"
                        android:visibility="gone"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvPairs"
                        tools:itemCount="11" />

                    <androidx.constraintlayout.widget.Group
                        android:id="@+id/groupData"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="invisible"
                        app:constraint_referenced_ids="rvFavoritePairs,rvPairs" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.core.widget.NestedScrollView>

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvNoData"
            style="@style/studioSansPurpleBlack20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/sizeXXXX_small"
            android:text="@string/no_data"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
